<resources>
    <string name="app_name" translatable="false">TrendingTopic</string>

    <string name="switchEnabledLabel">Service enabled ?</string>
    <string name="switchBootLabel">Enable service on device boot ?</string>
    <string name="spinnerLabel">TT location</string>
    <string name="information">Only the new trending topics for today will be notified</string>
    <string name="clearButtonLabel">Clear notified TT</string>
    <string name="ttCleared">TT cleared</string>

    <string name="service_enabled">Service enabled</string>
    <string name="service_disabled">Service disabled</string>
    <string name="location_updated">Location updated</string>

    <string name="notification_title">New trending topic !</string>
    <string name="notification_content">is the new trending topic on Twitter !</string>
    <string name="switchDebugLabel">Debug mode enabled ?</string>
</resources>
