<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/switchEnabledLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/switchEnabledLabel" />
    <Switch
        android:id="@+id/switchEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/switchEnabledLabel"
        android:layout_alignBaseline="@+id/switchEnabledLabel"
        android:onClick="onClickEnabledSwitch" />


    <TextView
        android:id="@+id/spinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switchEnabledLabel"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/spinnerLabel" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/spinnerLabel"
        android:layout_alignBaseline="@+id/spinnerLabel" />


    <TextView
        android:id="@+id/switchBootLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerLabel"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/switchBootLabel" />
    <Switch
        android:id="@+id/switchBoot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/switchBootLabel"
        android:layout_alignBaseline="@+id/switchBootLabel"
        android:onClick="onClickBootSwitch" />


    <TextView
        android:id="@+id/informationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchBootLabel"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/information" />
    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/informationTextView"
        android:text="@string/clearButtonLabel"
        android:onClick="onClickClearButton"/>


    <TextView
        android:id="@+id/switchDebugLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clearButton"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/switchDebugLabel" />
    <Switch
        android:id="@+id/switchDebug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/switchDebugLabel"
        android:layout_alignBaseline="@+id/switchDebugLabel"
        android:onClick="onClickDebugSwitch" />


    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:onClick="easterEgg"/>
</RelativeLayout>
